switch XML-style empty span tags to proper HTML style

--- a/index.html
+++ b/index.html
@@ -16,30 +16,30 @@
       <a id="c03" class="tile b-brs" href="#c03">03</a>
       <a id="c04" class="tile b-bls" href="#c04">04</a>
       <a id="c05" class="tile b-blw" href="#c05">05
-        <label id="tok1" class="token"><input type="checkbox"><span /></label>
+        <label id="tok1" class="token"><input type="checkbox"><span></span></label>
       </a>
       <a id="c06" class="tile b-tln" href="#c06">06</a>
       <a id="c07" class="tile b-tre" href="#c07">07
-        <label id="tok2" class="token"><input type="checkbox"><span /></label>
+        <label id="tok2" class="token"><input type="checkbox"><span></span></label>
       </a>
       <a id="c08" class="tile b-tre" href="#c08">08
-        <label id="tok3" class="token"><input type="checkbox"><span /></label>
+        <label id="tok3" class="token"><input type="checkbox"><span></span></label>
       </a>
       <a id="c09" class="tile b-tlw l2" href="#c09">09</a>
       <a id="c10" class="tile b-bls l3" href="#c10">10</a>
       <a id="c11" class="tile b-tre" href="#c11">11
-        <label id="tok4" class="token"><input type="checkbox"><span /></label>
+        <label id="tok4" class="token"><input type="checkbox"><span></span></label>
       </a>
       <a id="c12" class="tile b-tre" href="#c12">12
         <span class="mask"></span>
-        <label id="tok5" class="token"><input type="checkbox"><span /></label>
+        <label id="tok5" class="token"><input type="checkbox"><span></span></label>
       </a>
       <a id="c13" class="tile b-bls l2" href="#c13">13</a>
       <a id="c14" class="tile b-tre l5" href="#c14">14</a>
       <a id="c15" class="tile b-bls l2" href="#c15">15</a>
       <a id="finish" class="tile" href="#finish">FINISH</a>
       <div id="score">
-        Score: <span />
+        Score: <span></span>
       </div>
       <div id="filler2"></div>
     </div>
