add a "fork me" ribbon

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <title>CSS 'Game' - The Floor is Lava!</title>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="fork-ribbon.css">
 </head>
 <body class="nodebug">
 
@@ -46,6 +47,8 @@
     <div id="overlay"></div>
   </div>
   </form>
+
+  <a class="github-fork-ribbon" href="https://github.com/grantm/css-lava-game" data-ribbon="Fork me on GitHub" title="Fork me on GitHub">Fork me on GitHub</a>
 
 </body>
 </html>
